@@ -12,29 +12,33 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-public class RitualTableDisplay extends BasicDisplay {
+public final class RitualTableDisplay extends BasicDisplay {
 
     public RitualTableDisplay(List<EntryIngredient> inputs, List<EntryIngredient> outputs) {
         super(inputs, outputs);
     }
 
     public RitualTableDisplay(RitualTableRecipe recipe) {
-        super(getInputList(recipe), List.of(EntryIngredient.of(EntryStacks.of(recipe.getOutput(null)))));
-    }
-
-    private static List<EntryIngredient> getInputList(RitualTableRecipe recipe) {
-        if (recipe == null) return Collections.emptyList();
-
-        List<EntryIngredient> list = new ArrayList<>();
-        for (Ingredient ingredient : recipe.getIngredients()) {
-            list.add(EntryIngredients.ofIngredient(ingredient));
-        }
-
-        return list;
+        super(
+                getInputList(recipe),
+                List.of(EntryIngredient.of(EntryStacks.of(recipe.getOutput(null).copy())))
+        );
     }
 
     @Override
     public CategoryIdentifier<?> getCategoryIdentifier() {
         return RitualTableCategory.RITUAL_TABLE;
+    }
+
+    private static List<EntryIngredient> getInputList(RitualTableRecipe recipe) {
+        if (recipe == null) {
+            return Collections.emptyList();
+        }
+
+        List<EntryIngredient> list = new ArrayList<>();
+        for (Ingredient ingredient : recipe.getIngredients()) {
+            list.add(EntryIngredients.ofIngredient(ingredient));
+        }
+        return list;
     }
 }
